# axbind

./: Cargo.toml  README.md  notes  testrun.sh
src/: args.rs  configs.rs  configs.rs.orig  lib.rs  main.rs  tagfile.rs
testaxbindconfig/: config.toml
testaxbindconfig/schemes/: colors.toml  everythingandmore.toml  keybinds.toml
testconf/: mybinds.file.axbind  mycolors.file  mycolors.file.axbind  myunaffectedconfig.file
testconf/.axbind/: main.toml  mybindinggroup.toml  mycolorgroup.toml
