[package]
name = "axbind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
aho-corasick = {version = "1.1,1", features = ["std"]}
toml = "0.8.1"
optwrite = { path = "/home/gfunction/Projects/Rust/Lib/optwrite" }
toml-context = { path = "/home/gfunction/Projects/Rust/Lib/toml-context/v0.1" }

[dependencies.gfunc]
path = "/home/gfunction/Projects/Rust/Lib/gfunc/v0.1"
features = [ 'run' ]

